# obsws-rproxy-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: main.yml
server/: README.md  main.py  rproxy.py
